Add Custom Favicon Option
Option to add favicon.

--- a/src/options.html
+++ b/src/options.html
@@ -28,6 +28,16 @@
 
 			<input class="form__input form__input--textlike" type="text" id="customNewTabTitle" placeholder="New Tab">
 		</div>
+		
+		<div class="form__field">
+		<label class="form__label" for="customFavicon">Fav Icon URL</label>
+
+			<span class="form__hint">
+				The URL of the favicon to show. It should include the "https" or "http" part.
+			</span>
+			
+			<input class="form__input form__input--textlike" type="text" id="customFavicon" placeholder="https://example.com/favicon.ico">
+		</div>
 
 		<div class="form__field">
 			<label class="form__label" for="theme">Theme</label>
